# character-sheet

./: .gitmodules  README.md  build-all.sh
engine/: Cargo.toml
engine/src/: lib.rs
example/: index.html  package-lock.json  package.json  paper.min.css  webpack.config.js
example/src/: custom.css  example.js  example2.js  example_paper_renderer.js
jsbinding/: Cargo.toml
jsbinding/src/: lib.rs
langium/: langium-config.json  langium-quickstart.md  package-lock.json  package.json  tsconfig.monarch.json
langium/public/: character-sheet-server-worker.js  index.html
langium/src/cli/: generator.ts  main.ts
langium/src/extension/: main.ts
langium/src/language/: character-sheet-module.ts  character-sheet-validator.ts  character-sheet.langium  main-browser.ts  main.ts
langium/src/static/: setup.js
langium/src/web/: app.ts
parser/: Cargo.toml  cast.mermaid
parser/src/: ast.rs  cast.rs  lib.rs  main.rs  parser.rs  serializer.rs  tokenizer.rs
parser/src/parser/: ast.rs  cast.rs  cst.rs
parser/src/parser/cst/: VirtualToken.rs
renderer/: .gitignore  custom.css  example.js  example_paper_renderer.js  index.html  index.js  observable.js  package.json  paper.min.css  renderer.js  style.css  test.js
renderer/engine/: character_sheet_js.js  character_sheet_js_bg.js  character_sheet_js_bg.wasm
renderer/scripts/: prepare-wasm.sh
types/: Cargo.toml
types/resources/tests/: full_collection.json
types/src/: CharacterSheetCollection  character_sheet.rs  character_sheet_collection.rs  lib.rs  standard.rs
types/src/standard/: functions.rs  limiters.rs  selectors.rs
zparser/: build.zig  build.zig.zon
zparser/src/: cast.zig  root.zig
