[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
serde = { version = "1.0.204", optional = true, features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }
schemars = { version = "0.8.21", optional = true }

[features]
default = ["serde_json", "schemars"]
serde = ["dep:serde", "types/serde"]
serde_json = ["serde", "dep:serde_json", "types/serde_json"]
schemars = ["dep:schemars", "types/schemars"]
