[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", optional = true, features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }
schemars = { version = "0.8.21", optional = true }

[features]
default = ["serde_json", "schemars"]
serde = ["dep:serde"]
serde_json = ["serde", "dep:serde_json"]
schemars = ["dep:schemars"]
